--- a/webapp/routes/style.css
+++ b/webapp/routes/style.css
@@ -1,8 +1,12 @@
 :root {
-  --dialog-border: 1px solid rgb(0, 0, 200, 0.5);
-  --dialog-border-active: 1px solid rgb(0, 0, 200, 0.9);
-  --dialog-label-color: rgb(30, 30, 30);
+  --dialog-border-color: rgb(0, 0, 200, 0.5);
+  --dialog-border-color-active: rgb(0, 0, 200, 0.9);
+  --dialog-border: 1px solid var(--dialog-border-color);
+  --dialog-border-active: 1px solid var(--dialog-border-color-active);
+  --dialog-button-submit-background: rgb(45, 45, 255);
+  --dialog-button-active-shadow-color: rgb(90, 90, 255);
   --dialog-button-radius: 3px;
+  --dialog-label-color: rgb(30, 30, 30);
 }
 
 .dialog {
@@ -24,18 +28,17 @@ input[type=text] {
   width: 100%;
 }
 
-input[type=checkbox] {
-  width: 30px;
-}
-
 input[type=submit] {
-  background: #55f;
+  background: var(--dialog-button-submit-background);
   border: var(--dialog-border);
   border-radius: var(--dialog-button-radius);
   color: white;
 
   &:disabled {
     opacity: 0.5;
+  }
+  &:active {
+    box-shadow: 0 0 3px var(--dialog-button-active-shadow-color);
   }
 }
 
@@ -57,20 +60,23 @@ input:focus {
   background: white;
   border: var(--dialog-border);
   border-radius: var(--dialog-button-radius);
+  color: var(--dialog-border-color-active);
   padding: 0 10px;
-  color: #338;
-  opacity: 0.8;
+  opacity: 0.9;
 
   &:hover {
     border: var(--dialog-border-active);
     opacity: 1;
+  }
+  &:active {
+    box-shadow: 0 0 3px var(--dialog-button-active-shadow-color);
   }
 
   svg {
     height: 1.2em;
     display: inline-block;
     padding-bottom: 2px;
-    fill: rgb(0, 0, 200, 0.6);
+    fill: var(--dialog-border-color-active);
   }
 }
 
