--- a/webapp/routes/style.css
+++ b/webapp/routes/style.css
@@ -4,7 +4,7 @@
   --dialog-border: 1px solid var(--dialog-border-color);
   --dialog-border-active: 1px solid var(--dialog-border-color-active);
   --dialog-button-submit-background: rgb(45, 45, 255);
-  --dialog-button-active-shadow-color: rgb(90, 90, 255);
+  --dialog-button-active-shadow-color: rgb(100, 100, 255);
   --dialog-button-radius: 3px;
   --dialog-label-color: rgb(30, 30, 30);
 }
@@ -33,12 +33,13 @@ input[type=submit] {
   border: var(--dialog-border);
   border-radius: var(--dialog-button-radius);
   color: white;
+  padding: 0 10px;
 
   &:disabled {
     opacity: 0.5;
   }
   &:active {
-    box-shadow: 0 0 3px var(--dialog-button-active-shadow-color);
+    box-shadow: 0 0 2px var(--dialog-button-active-shadow-color);
   }
 }
 
@@ -69,7 +70,7 @@ input:focus {
     opacity: 1;
   }
   &:active {
-    box-shadow: 0 0 3px var(--dialog-button-active-shadow-color);
+    box-shadow: 0 0 2px var(--dialog-button-active-shadow-color);
   }
 
   svg {
