add some more limits to title and description

--- a/webapp/routes/style.css
+++ b/webapp/routes/style.css
@@ -19,6 +19,13 @@
   input[type=text] {
     margin-bottom: 8px;
   }
+  .title,
+  .description {
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    max-width: 160px;
+  }
 }
 
 input[type=text] {
