--- a/webapp/routes/style.css
+++ b/webapp/routes/style.css
@@ -7,6 +7,7 @@
   --dialog-button-active-shadow-color: rgb(150, 150, 255);
   --dialog-button-radius: 3px;
   --dialog-label-color: rgb(30, 30, 30);
+  --menu-item-highlighted: rgb(240, 240, 255);
 }
 
 dialog {
