better styling for Autocomplete in errornous state

--- a/webapp/routes/style.css
+++ b/webapp/routes/style.css
@@ -38,6 +38,10 @@ dialog {
   input:focus {
     border: var(--dialog-border-active);
   }
+
+  input.error {
+    border-color: red !important;
+  }
 }
 
 .create-dialog {
