spinner made a available from global CSS

--- a/webapp/routes/style.css
+++ b/webapp/routes/style.css
@@ -99,6 +99,27 @@ dialog {
     display: none;
   }
 }
+
 .banner a {
   color: blue;
 }
+
+.loader {
+     width: 20px;
+     height: 20px;
+     border: 3px solid #ddf;
+     border-bottom-color: #aaf;
+     border-radius: 50%;
+     display: inline-block;
+     box-sizing: border-box;
+     animation: rotation 1s linear infinite;
+ }
+
+ @keyframes rotation {
+     0% {
+         transform: rotate(0deg);
+     }
+     100% {
+         transform: rotate(360deg);
+     }
+ }
